# Custom_SQL_AI_AGENT

./: .gitignore  MANIFEST.in  README.md  apitest.py  build-linux-wheels.sh  build_wheels.sh  convert_to_py.py  convert_to_pyx.py  docs.md  project.toml  publish_instructions.txt  requirements.txt  setup.cfg  setup.py  tutorial.py
.cibuildwheel/: action.yml  config.cython
.github/workflows/: build.yml  build_and_deploy.yml  build_wheels.yml
miksi_ai_sdk/: agent.py  agent.pyx  api.py  master.py  pythontool.py  sqltool.py  tempCodeRunnerFile.py
miksi_ai_sdk.egg-info/: PKG-INFO  SOURCES.txt
panafrican_ai/: agent.pyx  master.pyx  utils.pyx
