[metadata]
name = miksi_ai_sdk
version = 0.0.10
description = Miksi-AI empowers your BI
long_description = file: docs.md
long_description_content_type = text/markdown
author = RichardKaranuMbuti
author_email = officialforrichardk@gmail.com
url = https://github.com/Miksi-io/Custom-Agent
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    Cython
    langchain
    sqlalchemy
    pymysql
    langchain_openai
    openai
python_requires = >=3.6

[options.package_data]
* = *.py, *.pyx

[options.extras_require]
dev =
    black
    isort
    mypy
    pytest

[tool:pytest]
addopts = --cov=miksi_ai_sdk --cov-report=term-missing